NowPlayingInfo should contain a unique identifier https://bugs.webkit.org/show_bug.cgi?id=178872 <rdar://problem/34924012>

Unreviewed, build fix.

* platform/audio/ios/MediaSessionManagerIOS.mm:
(WebCore::MediaSessionManageriOS::updateNowPlayingInfo): Call string.impl().hash() instead of
string.existingHash() because the later will assert in a debug build if the hash hasn't
been calculated yet.
* platform/audio/mac/MediaSessionManagerMac.mm:
(WebCore::MediaSessionManagerMac::updateNowPlayingInfo): Ditto.


Canonical link: https://commits.webkit.org/195092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224121 268f45cc-cd09-0410-ab3c-d52691b4dbfc